2015-10-29 Albert Chu <chu11@llnl.gov>

	* ipmi-oem/ipmi-oem-intelnm.c: Fix typo.

	* ipmi-oem/ipmi-oem-intelnm.c: Fix logic error in searching code in various "get" functions.
	
2015-10-29 Albert Chu <chu11@llnl.gov>

	* doc/freeipmi-faq.texi: URL updates and minor doc update.
	
2015-10-28 Albert Chu <chu11@llnl.gov>

	* Add warnings to deprecated header files.

	* Various code cleanup.
	
2015-10-27 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/include/freeipmi/templates/: Move some files to oem subdirectory.

	* freeipmi.spec.in: Update for new header directories.

	* libfreeipmi/freeipmi/spec/oem/ipmi-slave-address-oem-linux-kernel-spec.h: New file.

	* libfreeipmi/include/Makefile.am,
	libfreeipmi/include/freeipmi/freeipmi.h.in,
	libfreeipmi/include/freeipmi/spec/ipmi-slave-address-spec.h,
	libfreeipmi/include/freeipmi/spec/ipmi-slave-address-oem-spec.h:
	Update for new file.

	* libfreeipmi/: Various code cleanup.

2015-10-21 Albert Chu <chu11@llnl.gov>

	* Various minor bug fixes, cleanup, and distcheck fixes.
	
2015-10-20 Albert Chu <chu11@llnl.gov>

	Re-org of OEM code for future.

	* libfreeipmi/include/freeipmi/sdr/,
	libfreeipmi/include/freeipmi/record-format: Split OEM .h files
	into vendor specific files.

	* libfreeipmi/sdr, libfreeipmi/record-format: Split OEM files into
	specific vendor files.

	* ipmi-sensors/: Split OEM files into motherboard files.

	* libfreeipmi/sel: Split OEM files into motherboard files.

2015-10-19 Albert Chu <chu11@llnl.gov>

	Re-org of OEM code for future.

	* libfreeipmi/include/freeipmi/spec/: Split OEM .h files into vendor specific files. 

	* libfreeipmi/spec/ipmi-sensor-and-event-code-tables-oem-spec.c:
	Split OEM files into specific vendor files.
	
2015-10-19 Albert Chu <chu11@llnl.gov>

	Merge branch intelnm30

	* libfreeipmi/include/freeipmi/spec/ipmi-sensor-and-event-code-tables-oem-spec.h,
	libfreeipmi/sel/ipmi-sel-string-intel-node-manager.c: Support
	Intel NM 3.0 SEL events.
